--- a/server3/controllers/item-create/api.yml
+++ b/server3/controllers/item-create/api.yml
@@ -3,6 +3,7 @@ description: Create item
 operationId: createItem
 tags: ['item']
 security:
+  - serviceAuth: []
   - bearerAuth: []
 requestBody:
   description: data
@@ -29,8 +30,8 @@ responses:
               type: string
               description: Message
   "500":
-    $ref: ../../services/build-api/components.yml#/responses/UnexpectedErrorResponse
+    $ref: ../components.yml#/responses/UnexpectedErrorResponse
   "401":
-    $ref: ../../services/build-api/components.yml#/responses/UnauthorizedResponse
+    $ref: ../components.yml#/responses/UnauthorizedResponse
   "400":
-    $ref: ../../services/build-api/components.yml#/responses/BadRequestResponse
+    $ref: ../components.yml#/responses/BadRequestResponse
